--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
     "helmet": "^3.18.0",
     "morgan": "^1.9.1",
     "multer": "^1.4.1",
-    "redis": "^2.8.0"
+    "nconf": "^0.10.0",
+    "redis": "^2.8.0",
+    "swagger-jsdoc": "^3.2.9",
+    "swagger-ui-express": "^4.0.7"
   },
   "devDependencies": {
     "nodemon": "^1.19.1"
