--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "blockchain"
   ],
   "scripts": {
-    "start": "nodemon app.js"
+    "start": "nodemon app.js",
+    "zoobc": "node argv.js"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
     "chalk": "^2.4.2",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "debug": "^4.1.1",
     "dotenv": "^8.0.0",
