--- a/package.json
+++ b/package.json
@@ -2,23 +2,12 @@
   "name": "zoobc-explorer-api",
   "version": "0.0.1",
   "description": "A service for searching and displaying data published by the explorer server web API",
-  "main": "app.js",
-  "bin": "app.js",
-  "pkg": {
-    "assets": [
-      "spinechain-schema-prototype/**/*",
-      "spinechain-explorer-prototype/build/**/*"
-    ],
-    "targets": [
-      "node10-linux-x64",
-      "node10-macos-x64",
-      "node10-win-x64"
-    ]
-  },
   "repository": "git@github.com:zoobc/zoobc-explorer-api.git",
   "author": "ZooBC Explorer API Team",
   "license": "Apache",
   "private": true,
+  "bin": "app.js",
+  "main": "app.js",
   "keywords": [
     "blockchainzoo",
     "zoobc",
@@ -27,7 +16,19 @@
   ],
   "scripts": {
     "start": "nodemon app.js",
-    "zoobc": "node argv.js"
+    "zoobc": "node argv.js",
+    "pkg": "pkg app.js --output ./bin"
+  },
+  "pkg": {
+    "assets": [
+      "zoobc-schema/**/*",
+      "zoobc-explorer-ui/build/**/*"
+    ],
+    "targets": [
+      "node10-linux-x64",
+      "node10-macos-x64",
+      "node10-win-x64"
+    ]
   },
   "dependencies": {
     "body-parser": "^1.19.0",
