--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     ]
   },
   "dependencies": {
+    "apollo-server": "^2.6.0",
+    "apollo-server-express": "^2.6.0",
     "body-parser": "^1.19.0",
     "chalk": "^2.4.2",
     "compression": "^1.7.4",
@@ -39,7 +41,14 @@
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "express-rate-limit": "^5.0.0",
+    "graphql": "^14.3.1",
+    "graphql-resolvers": "^0.3.3",
+    "graphql-tools": "^4.0.4",
+    "grpc-pack": "^0.1.2",
     "helmet": "^3.18.0",
+    "iplocation": "^6.1.0",
+    "lodash": "^4.17.11",
+    "moment": "^2.24.0",
     "morgan": "^1.9.1",
     "multer": "^1.4.1",
     "nconf": "^0.10.0",
