modified script pkg

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "scripts": {
     "start": "nodemon app.js",
     "zoobc": "node argv.js",
-    "pkg": "pkg --out-path bin/ ."
+    "pkg": "pkg --out-path ../bin/ ."
   },
   "pkg": {
     "assets": [
