--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   ],
   "scripts": {
     "start": "nodemon app.js",
-    "zoobc": "node argv.js",
+    "zoobc": "node app.js",
     "pkg-win": "pkg -t node10-win-x64 --out-path ../bin/ .",
     "pkg-mac": "pkg -t node10-macos-x64 --out-path ../bin/ .",
     "pkg-linux": "pkg -t node10-linux-x64 --out-path ../bin/ ."
