--- a/package.json
+++ b/package.json
@@ -17,13 +17,14 @@
   "scripts": {
     "start": "nodemon app.js",
     "zoobc": "node app.js",
-    "pkg-win": "rm -f explorer-api-win && pkg -t node10-win-x64 --output explorer-api-win.exe app.js",
-    "pkg-mac": "rm -f explorer-api-mac && pkg -t node10-macos-x64 --output explorer-api-mac app.js",
-    "pkg-linux": "rm -f explorer-api-linux && pkg -t node10-linux-x64 --output explorer-api-linux app.js"
+    "pkg-win": "rm -f explorer-api-win && pkg -t node10-win-x64 --output explorer-api-win.exe .",
+    "pkg-mac": "rm -f explorer-api-mac && pkg -t node10-macos-x64 --output explorer-api-mac .",
+    "pkg-linux": "rm -f explorer-api-linux && pkg -t node10-linux-x64 --output explorer-api-linux ."
   },
   "pkg": {
     "assets": [
-      "zoobc-schema/**/*",
+      "zoobc-schema/model/*.proto",
+      "zoobc-schema/service/*.proto",
       "zoobc-explorer-ui/build/**/*"
     ]
   },
