[Pkg] Portable app for MacOS

--- a/.gitignore
+++ b/.gitignore
@@ -13,9 +13,11 @@ key.pem
 /coverage
 
 # production
+explorer-api
 explorer-api-linux
 explorer-api-mac
 explorer-api-win
+explorer-api.exe
 explorer-api-win.exe
 
 # zoobc schema
