--- a/package.json
+++ b/package.json
@@ -32,29 +32,35 @@
     "apollo-server": "^2.6.0",
     "apollo-server-express": "^2.6.0",
     "body-parser": "^1.19.0",
-    "chalk": "^2.4.2",
     "compression": "^1.7.4",
+    "connect-redis": "^4.0.2",
     "cors": "^2.8.5",
     "debug": "^4.1.1",
-    "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "express-rate-limit": "^5.0.0",
+    "express-session": "^1.16.2",
     "graphql": "^14.3.1",
+    "graphql-redis-subscriptions": "^2.1.1",
     "graphql-resolvers": "^0.3.3",
+    "graphql-subscriptions": "^1.1.0",
     "graphql-tools": "^4.0.4",
     "grpc-pack": "^0.1.2",
     "helmet": "^3.18.0",
+    "ioredis": "^4.14.0",
     "iplocation": "^6.1.0",
     "lodash": "^4.17.11",
     "moment": "^2.24.0",
     "morgan": "^1.9.1",
     "multer": "^1.4.1",
     "nconf": "^0.10.0",
+    "node-schedule": "^1.3.2",
     "redis": "^2.8.0",
     "swagger-jsdoc": "^3.2.9",
     "swagger-ui-express": "^4.0.7"
   },
   "devDependencies": {
+    "chalk": "^2.4.2",
+    "dotenv": "^8.1.0",
     "nodemon": "^1.19.1"
   }
 }
