--- a/package.json
+++ b/package.json
@@ -40,9 +40,7 @@
     "express-rate-limit": "^5.0.0",
     "express-session": "^1.16.2",
     "graphql": "^14.3.1",
-    "graphql-redis-subscriptions": "^2.1.1",
     "graphql-resolvers": "^0.3.3",
-    "graphql-subscriptions": "^1.1.0",
     "graphql-tools": "^4.0.4",
     "grpc-pack": "^0.1.2",
     "helmet": "^3.18.0",
@@ -55,6 +53,7 @@
     "nconf": "^0.10.0",
     "node-schedule": "^1.3.2",
     "redis": "^2.8.0",
+    "request-promise": "^4.2.4",
     "swagger-jsdoc": "^3.2.9",
     "swagger-ui-express": "^4.0.7"
   },
