--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "compression": "^1.7.4",
     "connect-redis": "^4.0.2",
     "cors": "^2.8.5",
+    "cron": "^1.7.1",
     "debug": "^4.1.1",
     "express": "^4.17.1",
     "express-rate-limit": "^5.0.0",
@@ -51,7 +52,6 @@
     "morgan": "^1.9.1",
     "multer": "^1.4.1",
     "nconf": "^0.10.0",
-    "node-schedule": "^1.3.2",
     "redis": "^2.8.0",
     "request-promise": "^4.2.4",
     "swagger-jsdoc": "^3.2.9",
