--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,15 +15,21 @@ jobs:
           command: |
             ssh-keyscan -H 139.162.15.80 >> ~/.ssh/known_hosts
             ssh root@139.162.15.80 pwd
-      - run:
-          name: Install Node Modules
-          command: |
-            npm install
-            npm start
-      - run:
-          name: Update Schema Sub-module
-          command: ./schema.sh
-      - save_cache:
-          paths:
-            - node_modules
-          key: v1-dependencies-{{ checksum "package.json" }}
+      # - run:
+      #     name: Install Node Modules
+      #     command: |
+      #       npm install
+      #       npm start
+      # - run:
+      #     name: Update Schema Sub-module
+      #     command: ./schema.sh
+      # - save_cache:
+      #     paths:
+      #       - node_modules
+      #     key: v1-dependencies-{{ checksum "package.json" }}
+
+workflows:
+  version: 2
+  build-deploy:
+    jobs:
+      - build
