[Setup] Explorer API CircleCi

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,26 +10,26 @@ jobs:
           keys:
             - v1-dependencies-{{ checksum "package.json" }}
             - v1-dependencies-
-      - run:
-          name: Open SSL RSA
-          command: |
-            ssh-keyscan -H 139.162.15.80 >> ~/.ssh/known_hosts
-            ssh root@139.162.15.80 pwd
       # - run:
-      #     name: Install Node Modules
+      #     name: Open SSL RSA
       #     command: |
-      #       npm install
-      #       npm start
-      # - run:
-      #     name: Update Schema Sub-module
-      #     command: ./schema.sh
-      # - save_cache:
-      #     paths:
-      #       - node_modules
-      #     key: v1-dependencies-{{ checksum "package.json" }}
+      #       ssh-keyscan -H 139.162.15.80 >> ~/.ssh/known_hosts
+      #       ssh root@139.162.15.80 pwd
+      - run:
+          name: Install Node Modules
+          command: |
+            npm install
+            npm start
+      - run:
+          name: Update Schema Sub-module
+          command: ./schema.sh
+      - save_cache:
+          paths:
+            - node_modules
+          key: v1-dependencies-{{ checksum "package.json" }}
 
 workflows:
   version: 2
-  build-deploy:
+  build:
     jobs:
       - build
