--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,9 +16,11 @@ jobs:
           command: |
             npm install
             # npm start
-      # - run:
-      #     name: Update Schema Sub-module
-      #     command: ./schema.sh
+      - run:
+          name: Update Schema Sub-module
+          command: |
+            git submodule init
+            git submodule update --remote
       # - restore_cache:
       #     keys:
       #       - v1-dependencies-{{ checksum "package.json" }}
