--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,25 +2,31 @@ version: 2
 jobs:
   build:
     docker:
-      - image: circleci/node:7.10
-    working_directory: ~/repo
+      - image: circleci/node:8.10
+    # working_directory: ~/zoobc-explorer-api
     steps:
-      - checkout
+      - add_ssh_keys
+      - run:
+          name: Add SSH key to known hosts
+          command: |
+            ssh-keyscan -H 139.162.15.80 >> ~/.ssh/known_hosts
+            ssh root@139.162.15.80 pwd
+      # - checkout
       # - run:
       #     name: Open SSL RSA
       #     command: |
       #       ssh-keyscan -H 139.162.15.80 >> ~/.ssh/known_hosts
       #       ssh root@139.162.15.80 pwd
-      - run:
-          name: Install Node Modules
-          command: |
-            npm install
-            # npm start
-      - run:
-          name: Update Schema Sub-module
-          command: |
-            git submodule init
-            git submodule update --remote
+      # - run:
+      #     name: Install Node Modules
+      #     command: |
+      #       npm install
+      #       # npm start
+      # - run:
+      #     name: Update Schema Sub-module
+      #     command: |
+      #       git submodule init
+      #       git submodule update --remote
       # - restore_cache:
       #     keys:
       #       - v1-dependencies-{{ checksum "package.json" }}
