--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,9 +5,9 @@ jobs:
       - image: circleci/node:8.10
     # working_directory: ~/zoobc-explorer-api
     steps:
-      - add_ssh_keys:
-          fingerprints:
-            - "95:c3:f9:41:99:ba:43:26:75:1d:dc:23:bb:58:c4:6d"
+      - add_ssh_keys
+          # fingerprints:
+          #   - "95:c3:f9:41:99:ba:43:26:75:1d:dc:23:bb:58:c4:6d"
       # - run:
       #     name: Add SSH key to known hosts
       #     command: |
