--- a/package.json
+++ b/package.json
@@ -50,11 +50,13 @@
     "iplocation": "^6.1.0",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
+    "mongoose": "^5.7.0",
     "morgan": "^1.9.1",
     "multer": "^1.4.2",
     "nconf": "^0.10.0",
     "redis": "^2.8.0",
     "request-promise": "^4.2.4",
+    "saslprep": "^1.0.3",
     "swagger-jsdoc": "^3.4.0",
     "swagger-ui-express": "^4.0.7"
   },
