--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,10 @@ DB_NAME='zoobcdb_explorer'
 DB_USER='username'
 DB_PASSWORD='password'
 
+# PROTO HOST
+PROTO_HOST='18.139.3.139'
+PROTO_PORT='7000'
+
 # OPENSSL
 # SSL_KEYPATH='./key.pem'
 # SSL_CERTPATH='./cert.pem'
