[Setup] Explorer API CircleCi

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,18 +3,30 @@ jobs:
   deploy:
     docker:
       - image: circleci/node:8.10
-    # working_directory: ~/zoobc-explorer-api
+    working_directory: ~/zoobc-explorer-api
     steps:
-      - run:
-          name: Fix SSH could not resolve hostname
-          command: ssh-keyscan -H 139.162.15.80 >> ~/.ssh/known_hosts
       - add_ssh_keys:
           fingerprints:
-            - "14:09:a1:b2:b3:c4:d5:e6:f7:g8:h9:81:"
+            - "17:49:86:b6:a6:8b:f0:eb:7b:53:3a:3a:c1:40:5b:33"
+      - checkout
       - run:
-          name: Deploy Over SSH
+          name: Setup SSH Key Host
           command: |
-            ssh root@139.162.15.80 "ls -ltr"
+            chmod 755 .circleci/deploy.sh
+            ssh-keyscan -H 139.162.15.80 >> ~/.ssh/known_hosts
+      - run:
+          name: Install Dependencies
+          command: npm ci
+      - run:
+          name: Deploy
+          command: ./.circleci/deploy.sh
+      # - run:
+      #     name: Fix SSH could not resolve hostname
+      #     command: ssh-keyscan -H 139.162.15.80 >> ~/.ssh/known_hosts
+      # - run:
+      #     name: Deploy Over SSH
+      #     command: |
+      #       ssh root@139.162.15.80 "ls -ltr"
       # - add_ssh_keys
           # fingerprints:
           #   - "95:c3:f9:41:99:ba:43:26:75:1d:dc:23:bb:58:c4:6d"
