--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,7 +19,7 @@ jobs:
       #     command: npm install
       - run:
           name: Deploy
-          command: ssh root@139.162.15.80 "cd zoobc-explorer-api/ && ls -ltr"
+          command: ssh root@139.162.15.80 "cd zoobc-explorer-api/ && chmod +x deploy.sh && ./deploy.sh"
 
 workflows:
   version: 2
