--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,23 +3,20 @@ jobs:
   deploy:
     docker:
       - image: circleci/node:8.10
-    # working_directory: ~/zoobc-explorer-api
     steps:
       - add_ssh_keys:
           fingerprints:
             - "17:49:86:b6:a6:8b:f0:eb:7b:53:3a:3a:c1:40:5b:33"
-      # - checkout
       - run:
           name: Setup SSH Key Host
           command: |
-            # chmod 755 .circleci/deploy.sh
             ssh-keyscan -H 139.162.15.80 >> ~/.ssh/known_hosts
-      # - run:
-      #     name: Install Dependencies
-      #     command: npm install
       - run:
           name: Deploy
-          command: ssh root@139.162.15.80 "cd zoobc-explorer-api/ && chmod +x deploy.sh && ./deploy.sh"
+          command: |
+            ssh root@139.162.15.80 "cd zoobc-explorer-api/
+            chmod +x deploy.sh
+            ./deploy.sh"
 
 workflows:
   version: 2
