[App] Configure redis

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,18 @@
 # DATABASE
+DB_PORT=27017
 DB_HOST='localhost'
 DB_NAME='zoobcdb_explorer'
 DB_USER='username'
 DB_PASSWORD='password'
 
+# REDIS
+RD_PORT=6379
+RD_HOST='localhost'
+RD_PASSWORD='password' # Set blank string if no need password
+
 # PROTO HOST
 PROTO_HOST='100.69.69.96'
-PROTO_PORT='3000'
+PROTO_PORT=3000
 
 # OPENSSL
 # SSL_KEYPATH='./key.pem'
