adding redis + NodeJS

--- a/.env.example
+++ b/.env.example
@@ -1,18 +1,21 @@
-# DATABASE
-DB_PORT=27017
-DB_HOST='localhost'
-DB_NAME='zoobcdb_explorer'
-DB_USER='username'
-DB_PASSWORD='password'
+#APP
+#PORT=9696
 
-# REDIS
-RD_PORT=6379
-RD_HOST='localhost'
-RD_PASSWORD='password' # Set blank string if no need password
+# DATABASE
+# DB_HOST='139.162.15.80'
+# DB_NAME='zoobcdb_explorer'
+# DB_USER='zoobc'
+# DB_PASSWORD='zoobc@explorer2019'
+
+# DATABASE
+DB_HOST='localhost:27017'
+DB_NAME='zoobcdb_explorer'
+DB_USER=''
+DB_PASSWORD=''
 
 # PROTO HOST
-PROTO_HOST='100.69.69.96'
-PROTO_PORT=3000
+PROTO_HOST='18.139.3.139'
+PROTO_PORT='7000'
 
 # OPENSSL
 # SSL_KEYPATH='./key.pem'
