--- a/.env.local
+++ b/.env.local
@@ -1,22 +1,24 @@
 # APP
-PORT=6969
+PORT=9966
 HOST='localhost'
 
 # DATABASE
-DB_PORT=27017
 DB_HOST='localhost'
 DB_NAME='zoobcdb_explorer'
-DB_USER='username'
-DB_PASSWORD='password'
+DB_USER=''
+DB_PASSWORD=''
 
 # REDIS
 RD_PORT=6379
 RD_HOST='localhost'
-RD_PASSWORD='password' # Set blank string if no need password
+RD_PASSWORD=''
+
+# GUN PEERS
+GD_PEERS=['http://139.162.15.80:8765/gun']
 
 # PROTO HOST
-PROTO_HOST='100.69.69.96'
-PROTO_PORT=3000
+PROTO_HOST='18.139.3.139'
+PROTO_PORT=7000
 
 # OPENSSL
 # SSL_KEYPATH='./key.pem'
