--- a/package.json
+++ b/package.json
@@ -21,21 +21,25 @@
   "dependencies": {
     "apollo-server": "^2.9.3",
     "apollo-server-express": "^2.9.3",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "chalk": "^2.4.2",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "cron": "^1.7.2",
+    "dataloader": "^2.0.0",
     "debug": "^4.1.1",
     "express": "^4.17.1",
     "express-rate-limit": "^5.0.0",
     "express-session": "^1.16.2",
     "graphql": "^14.5.4",
+    "graphql-iso-date": "^3.6.1",
     "graphql-resolvers": "^0.3.3",
     "graphql-tools": "^4.0.5",
     "grpc-pack": "^0.2.2",
     "helmet": "^3.21.0",
     "iplocation": "^6.1.0",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "mongoose": "^5.7.0",
@@ -45,7 +49,8 @@
     "redis": "^2.8.0",
     "saslprep": "^1.0.3",
     "swagger-jsdoc": "^3.4.0",
-    "swagger-ui-express": "^4.0.7"
+    "swagger-ui-express": "^4.0.7",
+    "validator": "^12.1.0"
   },
   "devDependencies": {
     "dotenv": "^8.1.0",
