--- a/package.json
+++ b/package.json
@@ -46,11 +46,13 @@
     "morgan": "^1.9.1",
     "multer": "^1.4.2",
     "nconf": "^0.10.0",
+    "node-persist": "^3.0.5",
     "redis": "^2.8.0",
     "saslprep": "^1.0.3",
     "swagger-jsdoc": "^3.4.0",
     "swagger-ui-express": "^4.0.7",
-    "validator": "^12.1.0"
+    "validator": "^12.1.0",
+    "yargs": "^15.0.2"
   },
   "devDependencies": {
     "dotenv": "^8.1.0",
