test ssh circleci

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,7 +39,7 @@ workflows:
       - deploy-testnet:
           filters:
             branches:
-              only: tesnet
+              only: testnet
       - deploy-mainnet:
           filters:
             branches:
