--- a/package.json
+++ b/package.json
@@ -21,12 +21,12 @@
   "dependencies": {
     "apollo-server": "^2.9.3",
     "apollo-server-express": "^2.9.3",
-    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "chalk": "^2.4.2",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "cron": "^1.7.2",
+    "crypto-js": "^3.1.9-1",
     "dataloader": "^2.0.0",
     "debug": "^4.1.1",
     "express": "^4.17.1",
