--- a/.env.example
+++ b/.env.example
@@ -7,7 +7,7 @@ TOKEN_SECRET='token-secret'
 # DATABASE
 DB_PORT=27017
 DB_HOST='localhost'
-DB_NAME='zoobcdb_explorer'
+DB_NAME='database_name'
 DB_USER='username'
 DB_PASSWORD='password'
 
@@ -17,7 +17,7 @@ RD_HOST='localhost'
 RD_PASSWORD='password' # Set blank string if no need password
 
 # PROTO HOST
-PROTO_HOST='100.69.69.96'
+PROTO_HOST='123.123.123.123'
 PROTO_PORT=3000
 
 # OPENSSL
