--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
     "cors": "^2.8.5",
     "cron": "^1.7.2",
     "crypto-js": "^3.1.9-1",
-    "dataloader": "^2.0.0",
     "debug": "^4.1.1",
     "express": "^4.17.1",
     "express-rate-limit": "^5.0.0",
@@ -35,7 +34,6 @@
     "graphql": "^14.5.4",
     "graphql-iso-date": "^3.6.1",
     "graphql-resolvers": "^0.3.3",
-    "graphql-tools": "^4.0.5",
     "grpc-pack": "^0.2.3",
     "helmet": "^3.21.0",
     "iplocation": "^6.1.0",
@@ -46,13 +44,11 @@
     "morgan": "^1.9.1",
     "multer": "^1.4.2",
     "nconf": "^0.10.0",
-    "node-persist": "^3.0.5",
     "redis": "^2.8.0",
     "saslprep": "^1.0.3",
     "swagger-jsdoc": "^3.4.0",
     "swagger-ui-express": "^4.0.7",
-    "validator": "^12.1.0",
-    "yargs": "^15.0.2"
+    "validator": "^12.1.0"
   },
   "devDependencies": {
     "dotenv": "^8.1.0",
