--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,9 @@ jobs:
       - run:
           name: Deploy Testnet
           command: |
-            ssh ${SSH_USER}@${SSH_HOST_TESTNET} "pm2 deploy ecosystem.config.js testnet exec "git pull origin master && yarn install && pm2 restart all --update-env""
+            ssh ${SSH_USER}@${SSH_HOST_MAINNET} "pm2 deploy ecosystem.config.js testnet update"
+          # command: |
+          #   ssh ${SSH_USER}@${SSH_HOST_TESTNET} "pm2 deploy ecosystem.config.js testnet exec "git pull origin master && yarn install && pm2 restart all --update-env""
 
   deploy-mainnet:
     docker:
