--- a/package.json
+++ b/package.json
@@ -16,7 +16,18 @@
   ],
   "scripts": {
     "start": "nodemon app.js",
-    "schema": "./schema.sh"
+    "schema": "./schema.sh",
+    "eslint": "eslint .",
+    "eslint:fix": "eslint --fix ."
+  },
+  "lint-staged": {
+    "*.+(js|jsx)": ["eslint --fix"],
+    "*.+(js|jsx|json|css|md)": ["prettier --write"]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   },
   "dependencies": {
     "apollo-server": "^2.9.3",
@@ -51,7 +62,15 @@
     "validator": "^12.1.0"
   },
   "devDependencies": {
-    "dotenv": "^8.1.0",
-    "nodemon": "^1.19.1"
+    "dotenv": "^8.2.0",
+    "eslint": "^7.2.0",
+    "eslint-config-node": "^4.1.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^3.1.3",
+    "husky": "^4.2.5",
+    "lint-staged": "^10.2.9",
+    "nodemon": "^2.0.3",
+    "prettier": "^2.0.5"
   }
 }
