--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "chalk": "^2.4.2",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
-    "cron": "^1.7.2",
     "crypto-js": "^3.1.9-1",
     "debug": "^4.1.1",
     "express": "^4.17.1",
@@ -34,21 +33,16 @@
     "graphql": "^14.5.4",
     "graphql-iso-date": "^3.6.1",
     "graphql-resolvers": "^0.3.3",
-    "grpc-pack": "^0.2.3",
     "helmet": "^3.21.0",
-    "iplocation": "^6.1.0",
-    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "mongoose": "^5.7.0",
     "morgan": "^1.9.1",
-    "multer": "^1.4.2",
     "nconf": "^0.10.0",
     "redis": "^2.8.0",
     "saslprep": "^1.0.3",
     "swagger-jsdoc": "^3.4.0",
-    "swagger-ui-express": "^4.0.7",
-    "validator": "^12.1.0"
+    "swagger-ui-express": "^4.0.7"
   },
   "devDependencies": {
     "dotenv": "^8.1.0",
