add shell script to copy models folder from exp-scheduler

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "blockchain"
   ],
   "scripts": {
+    "models": "./models.sh",
     "start": "nodemon app.js",
     "eslint": "eslint .",
     "eslint:fix": "eslint --fix ."
