--- a/.prettierrc
+++ b/.prettierrc
@@ -3,7 +3,7 @@
   "trailingComma": "es5",
   "printWidth": 120,
   "tabWidth": 2,
-  "semi": true,
+  "semi": false,
   "bracketSpacing": true,
   "jsxBracketSameLine": false,
   "arrowParens": "avoid",
