--- a/.env.example
+++ b/.env.example
@@ -19,6 +19,9 @@ RD_PASSWORD='password' # Set blank string if no need password
 PROTO_HOST='123.123.123.123'
 PROTO_PORT=3000
 
+GRAPHQL_CLIENT_ID='1234567890'
+GRAPHQL_CLIENT_SECRET='client-secret-key'
+
 # OPENSSL
 # SSL_KEYPATH='./key.pem'
 # SSL_CERTPATH='./cert.pem'
