add USE_SIGNATURE_HEADER in .env

--- a/.env.example
+++ b/.env.example
@@ -22,6 +22,8 @@ PROTO_PORT=3000
 GRAPHQL_CLIENT_ID='1234567890'
 GRAPHQL_CLIENT_SECRET='client-secret-key'
 
+USE_SIGNATURE_HEADER='true'
+
 # OPENSSL
 # SSL_KEYPATH='./key.pem'
 # SSL_CERTPATH='./cert.pem'
